src/objects/Patient__c.object
<CustomObject>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <pluralLabel>Patients</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Patient Name</label>
    </nameField>
    <sharingModel>Private</sharingModel>

    <fields>
        <fullName>MedicalCondition__c</fullName>
        <label>Medical Condition</label>
        <type>TextArea</type>
        <description>Protected health info - sensitive.</description>
    </fields>

    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <type>LongTextArea</type>
        <length>32768</length>
        <description>Health-related info.</description>
    </fields>

    <fields>
        <fullName>PersonalEmail__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
        <description>Private contact information.</description>
    </fields>
</CustomObject>